fix css height on mobile

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -22,8 +22,9 @@
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%; //1rem = 10px, 10px/16px = 62.5%
+    height: -webkit-fill-available;
     cursor: default;
+    font-size: 62.5%; //1rem = 10px, 10px/16px = 62.5%
     -webkit-tap-highlight-color: transparent;
     -webkit-text-size-adjust: none;
     -webkit-font-smoothing: subpixel-antialiased;
@@ -38,6 +39,7 @@ body {
     line-height: 1.18;
     color: var(--color-white);
     min-height: 100vh;
+    min-height: -webkit-fill-available;
     max-width: 100vw;
     overscroll-behavior: none;
     -webkit-overflow-scrolling: none;
@@ -72,5 +74,6 @@ img {
     left: 0;
     width: 100vw;
     height: 100vh;
+    height: -webkit-fill-available;
     z-index: -99;
 }
